<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    app:cardUseCompatPadding="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dp">


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <WebView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/webView"
                        android:padding="5dp"/>

                    <Button
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_tomar_examen"
                        android:layout_margin="5dp"
                        android:textColor="@color/white"
                        android:visibility="gone"
                        android:background="@drawable/custom_button"
                        android:id="@+id/button_quiz"
                        android:layout_gravity="center_horizontal" />

                    <Button
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_siguiente_leccion"
                        android:layout_margin="5dp"
                        android:visibility="gone"
                        android:textColor="@color/white"
                        android:background="@drawable/custom_button"
                        android:id="@+id/button_next_lesson"
                        android:layout_gravity="center_horizontal" />

                    <Button
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_ver_diploma"
                        android:layout_margin="5dp"
                        android:visibility="gone"
                        android:textColor="@color/white"
                        android:background="@drawable/custom_button"
                        android:id="@+id/button_view_diploma"
                        android:layout_gravity="center_horizontal" />



                </LinearLayout>
            </ScrollView>

            <!--<TextView
                android:id="@+id/title"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Card title" />

            <TextView
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/lorem_ipsum" />

            <Button
                style="@style/ButtonStyle"
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="Button" />-->
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="-5dp"
            android:src="@drawable/ic_bookmark_24dp" />

    </FrameLayout>

</android.support.v7.widget.CardView>
